--- a/assets/A-templating/01-hello-world/01-lab.html
+++ b/assets/A-templating/01-hello-world/01-lab.html
@@ -10,18 +10,38 @@
 
 </head>
 <body>
+	<div id="container">
+
+		<div id="child">
+			bubba gum
+		</div>
+
+	</div>
 
 <script id='template' type='text/ractive'>
-	<h1>Hello World</h1>
-	<p>Irony chillwave esse hella bespoke, wayfarers dolore keffiyeh eu biodiesel meh accusamus ethical Godard polaroid. Farm-to-table Pinterest ut, Pitchfork artisan qui ex tempor drinking vinegar. Vinyl mustache aliqua hella photo booth, voluptate meh Brooklyn kitsch flexitarian laboris quinoa. Salvia Godard street art, 8-bit ennui yr mustache synth. Skateboard consequat disrupt next level, placeat chillwave salvia meh pop-up tempor do Carles. Pug fanny pack consectetur, yr sapiente 8-bit trust fund tempor. Selfies High Life art party, master cleanse Godard et anim esse Thundercats irony craft beer nulla photo booth freegan.</p>
-	<p>
+	<h1>{{test}}</h1>
 </script>
+
+<script id='other' type='text/ractive'>
+	<p>{{another}}</p>
+</script>
+<body>
 
 <script>
-new Ractive({
-	el: document.body,
-	template: '#template'
-})
-</script>
+	new Ractive({
+		el: '#container',
+		template: '#template',
+		append: '#child',
+		data: {
+			test: 'HELLOOOOOOOOOOOO world'
+		}
+	})
+	</script>
 
-<body>
+<script>
+	new Ractive({
+		el: '#child',
+		template: '<p>wunderground</p>'
+
+	})
+	</script>
