--- a/assets/A-templating/04-express-yourself-control-yourself/04-lab.html
+++ b/assets/A-templating/04-express-yourself-control-yourself/04-lab.html
@@ -8,6 +8,7 @@
 	<script src='../../js/ractive.js'></script>
 	<script src='https://code.jquery.com/jquery-2.1.1.min.js'></script>
 	<script src='//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js'></script>
+	<script src='../../data/dadata.js'></script>
 
 </head>
 <body>
@@ -22,6 +23,20 @@
 			<p>{{name}} is a child of {{../../name}}</p>
 		{{/each}}
 	{{/with}}
+
+	<ul>
+		{{#each person}}
+		<li> {{#name}}{{first}}  {{last}}: {{age}}
+		  <ul>
+			  {{#each friends}}
+				  <li>{{name}}</li>
+				{{/each}}
+			</ul>
+			{{#with }}
+		  {{/}}
+		  </li>
+		{{/each}}
+	</ul>
 </script>
 
 <script>
@@ -31,6 +46,7 @@ new Ractive({
 	data: {
 		items: [ 1,3,7,8,9,10,11,2,12,4,5,6 ],
 		_: _,
+		person: dadata,
 		parent: {
 			name: 'bob',
 			children: [
